--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -27,5 +27,15 @@
   "activation_method": "Activation method",
   "manufacturer": "Manufacturer",
   "model": "Model",
-  "device_type": "Device type"
+  "device_type": "Device type",
+  "N/A": "N/A",
+  "lng": "Lng",
+  "lat": "Lat",
+  "all_rights_reserved": "All Rights Reserved",
+  "profile": "Profile",
+  "first_name": "First Name",
+  "family_name": "Family Nom",
+  "email_address": "Email Address",
+  "phone_number": "Phone number",
+  "save": "Save"
 }
