Move lat lng to device namespace

--- a/src/translations/en/dashboard.json
+++ b/src/translations/en/dashboard.json
@@ -6,7 +6,5 @@
   "alert": "Alert",
   "alert_plural": "Alerts",
   "uplink": "Uplink",
-  "join": "Join",
-  "lng": "Lng",
-  "lat": "Lat"
+  "join": "Join"
 }
