Add devices translations

--- a/src/translations/en/devices.json
+++ b/src/translations/en/devices.json
@@ -12,5 +12,7 @@
   "activation_method": "Activation method",
   "manufacturer": "Manufacturer",
   "model": "Model",
-  "device_type": "Device type"
+  "device_type": "Device type",
+  "profile": "Profile",
+  "history": "History"
 }
