Add translation for code

--- a/src/translations/en/auth.json
+++ b/src/translations/en/auth.json
@@ -1,6 +1,7 @@
 {
   "password": "Password",
   "email": "Email",
+  "code": "Code",
   "signin": "Sign in",
   "need_help": "Need help?",
   "by_logging": "By logging in, I agree to the",
