--- a/src/translations/fr/auth.json
+++ b/src/translations/fr/auth.json
@@ -1,6 +1,7 @@
 {
   "password": "Mot de passe",
   "email": "Email",
+  "code": "Code",
   "signin": "Se connecter",
   "need_help": "Besoin d'aide ?",
   "by_logging": "En me connectant, j'accepcte les",
