Add translation for new password

--- a/src/translations/fr/auth.json
+++ b/src/translations/fr/auth.json
@@ -1,5 +1,6 @@
 {
   "password": "Mot de passe",
+  "new_password": "Nouveau mot de passe",
   "email": "Email",
   "code": "Code",
   "signin": "Se connecter",
