Add translation for "Select device"

--- a/src/translations/en/devices.json
+++ b/src/translations/en/devices.json
@@ -14,5 +14,6 @@
   "model": "Model",
   "device_type": "Device type",
   "profile": "Profile",
-  "history": "History"
+  "history": "History",
+  "select_device": "Select Device"
 }
